samples/_failures_safe/1761153663_16a512_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ca6cc774.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_ca6cc774.c:132:5: error: expected declaration or statement at end of input
  132 |     for (int i = 0; i < analyzer->count; i++) {
      |     ^~~
./samples/SAFE/__tmp_ca6cc774.c:132:5: error: expected declaration or statement at end of input
